# SimpleCPDLC

./: .gitignore  main.py  pyproject.toml  resource.py  resource.qrc  resource_rc.py
docs/: build.bat
src/: meta.py
src/config/: __init__.py  config.py  config_loader.py
src/cpdlc/: CPDLCManager.py  __init__.py
src/manager/: __init__.py  client_manager.py  cpdlc_manager.py  flight_plan_manager.py
src/types/: types.py
src/ui/: atis_window.py  config_window.py  cpdlc_connect_window.py  dcl_request_window.py  main_window.py  message_window.py  meter_window.py  start_window.py  telex_message_window.py
src/ui/form/: atis.ui  atis_window.ui  config_window.ui  cpdlc_connect.ui  cpdlc_connect_window.ui  dcl_request_window.ui  main_window.ui  message_window.ui  meter.ui  meter_window.ui  start_window.ui  telex_message.ui  telex_message_window.ui
src/ui/form/generate/: atis.py  atis_window.py  config_window.py  cpdlc_connect.py  cpdlc_connect_window.py  dcl_request.py  dcl_request_window.py  main_window.py  message_window.py  meter.py  meter_window.py  start_window.py  telex_message.py  telex_message_window.py
src/utils/: __init__.py  logger.py  version.py
